--- a/pegasus/sites.v3/code.org/public/css/accept-terms-interstitial.css
+++ b/pegasus/sites.v3/code.org/public/css/accept-terms-interstitial.css
@@ -1,24 +1,9 @@
 #terms-modal {
   text-align: left;
-  top: -10px;
-  padding-bottom: 30px;
-}
-#terms-modal .modal-dialog {
-  width: 80%;
-  position: fixed;
-  margin-left: -280px;
-  left: 30%;
-  right: auto;
-  height: 100%;
 }
 #terms-modal .modal-content {
   margin: 0 !important;
   padding: 0 30px !important;
-}
-#terms-modal .modal-content p {
-  font-size: 12px;
-  color: #333;
-  line-height: 18px;
 }
 #terms-modal .left {
   float: left;
@@ -27,10 +12,12 @@
   float: right;
 }
 #terms-modal .scroll-box {
-  overflow-y: scroll;
-  height: 350px;
+  height: 400px;
   border: 1px solid #bbb;
   padding: 20px;
+  resize: vertical; 
+  overflow: auto;
+  overflow-y: scroll;
 }
 #terms-modal .primary-button {
   background-color: #ffa400;
@@ -52,8 +39,13 @@
   border-color: #0094ca;
   color: white;
 }
-#terms-modal .no-top-margin {
-  margin-top: 0;
+#terms-modal .custom-h1 {
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+#terms-modal .custom-h2 {
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 #terms-modal .right-margin-5 {
   margin-right: 5px;
@@ -63,56 +55,14 @@
   font-family: "Gotham 4r", sans-serif;
 }
 
-@media screen and (min-width: 601px) and (max-width: 970px) {
+@media (min-width: 768px) {
   #terms-modal .modal-dialog {
-    width: 600px;
-    left: 45%;
-  }
-
-  #terms-modal .scroll-box {
-    height: 130px;
+    width: 750px;
   }
 }
 
-@media screen and (min-width: 401px) and (max-width: 600px) {
-  #terms-modal {
-    font-size: 12px;
-    line-height: 14px;
-  }
-
-  #terms-modal .modal-dialog {
-    width: 400px;
-    left: 65%;
-  }
-
+@media (max-width: 500px) {
   #terms-modal .scroll-box {
-    height: 100px;
-    font-size: 10px;
-    line-height: 12px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  #terms-modal {
-    width: 350px;
-    left: 75%;
-    font-size: 12px;
-    line-height: 14px;
-  }
-
-  #terms-modal .modal-dialog {
-    width: 350px;
-    left: 75%;
-  }
-
-  #terms-modal .scroll-box {
-    height: 100px;
-    font-size: 10px;
-    line-height: 12px;
-  }
-
-  #terms-modal h2 {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    height: 200px;
   }
 }
